Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/NoStatic.java
/*
 * @test /nodynamiccopyright/
 * @bug 8022322
 * @summary Static methods are not allowed in an annotation.
 * @compile/fail/ref=NoStatic.out -XDrawDiagnostics NoStatic.java
 */

@interface NoStatic {
    static int m() {return 0;}
}
