Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/NoStatic.out
NoStatic.java:9:16: compiler.err.mod.not.allowed.here: static
NoStatic.java:9:20: compiler.err.intf.meth.cant.have.body
2 errors
